--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Academia de baile</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/a42b43434c.js" crossorigin="anonymous"></script>
     <!-- CSS  -->
     <link rel="stylesheet" type="text/css" href="/css/index.css" />
-
-
   </head>
   <body>
     <header>
@@ -22,7 +21,8 @@
       </nav>
     </header>
     <hr />
-
+    <main>
+    <section>
     <div class="container">
       <div class="fondoImagen">
         <img class="imagenBailarines" src="imagenes/baile2-PhotoRoom.png-PhotoRoom.png" alt="Imagen 1" />
@@ -33,6 +33,8 @@
         <a class="botonBailes indent"href="#">Bailes</a>
       </div>
     </div>
+  </section>
+  <section>
     <div class="container">
     <div class="fondoImagenDos">
         <img class="imagen" src="imagenes/baile_bachata.jfif" alt="Imagen 2">
@@ -43,7 +45,8 @@
         <img class="imagen" src="imagenes/baile_salsa1.jfif" alt="Imagen 7">
     </div>
     </div>
-
+  </section>
+  </main>
     <!-- Repetir sección para las otras 5 imágenes -->
     <footer class="footer">
       <h3>Seguinos en nuestras redes:</h3>
