--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
       <div class="item">
         <h1>Salsa</h1>
         <hr>
-        <p>Es un baile apasionante. En nuestras clases de salsa, aprenderás a sentir el ritmo de la música y a moverte al compás de la salsa. Con nuestros instructores experimentados, pronto estarás bailando como un profesional</p>
+        <p>s un baile apasionante. En nuestras clases de salsa, aprenderás a sentir el ritmo de la música y a moverte al compás de la salsa. Con nuestros instructores experimentados, pronto estarás bailando como un profesional</p>
       </div>
       <div class="item">
         <h1>Bachata</h1>
         <hr>
-        <p>Es un baile sensual y romántico. En nuestras clases de bachata, te enseñaremos los pasos básicos y las técnicas avanzadas para que puedas bailar la bachata con confianza y estilo</p>
+        <p>s un baile sensual y romántico. En nuestras clases de bachata, te enseñaremos los pasos básicos y las técnicas avanzadas para que puedas bailar la bachata con confianza y estilo</p>
       </div>
       <div class="item">
         <h1>Merengue</h1>
         <hr>
-        <p>Es un baile animado y divertido.  En nuestras clases de merengue, te enseñaremos los pasos básicos y las técnicas avanzadas para que puedas bailar el merengue con soltura y gracia. ¡Ven y únete a la fiesta de baile!</p>
+        <p>s un baile animado y divertido.  En nuestras clases de merengue, te enseñaremos los pasos básicos y las técnicas avanzadas para que puedas bailar el merengue con soltura y gracia. ¡Ven y únete a la fiesta de baile!</p>
       </div>
     </div>
 </main>
