--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="containerLetras">
         <h1>BAILA</h1>
         <p>SIN LIMITES</p>
-        <a class="botonBailes indent"href="#">Bailes</a>
+        <a class="botonBailes indent"href="./page/bailes.html">Bailes</a>
       </div>
     </div>
 </section> 
