--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <title>Academia de baile</title>
+    <!-- bootstrap -->
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"
+    rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <!-- BOOTSTRAP SCRIPT-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"
+      integrity="sha256-cAnmHNGzGYh3qfxBxQmLH50zztUGcvmws8t94f0EzJY="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <!-- VIEWPORT -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- fontawesome -->
@@ -12,15 +29,46 @@
   </head>
   <body>
     <header>
-        <img class="logo" src="imagenes/G (1)-PhotoRoom.png-PhotoRoom.png" alt="Logo" />
-      <nav>
-        <ul>
-          <li><a href="./page/instalaciones.html">Instalaciones</a></li>
-          <li><a href="./page/nosotrxs.html">Nosotrxs</a></li>
-          <li><a href="./page/aranceles.html">Aranceles</a></li>
-          <li><a class="botonBailes" href="./page/bailes.html">Bailes</a></li>
-        </ul>
-      </nav>
+        
+        <nav class="navbar navbar-expand-md navbar-light navbarnosotros">
+          <div class="container-fluid">
+            <a class="navbar-brand">
+              <img  width="150" src="imagenes/G (1)-PhotoRoom.png-PhotoRoom.png" alt="Logo" />
+            </a>
+            <button
+              class="navbar-toggler bg-light"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link text-dark" href="./page/instalaciones.html">Instalaciones</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark" href="./page/nosotrxs.html">Nosotrxs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark" href="./page/aranceles.html">Aranceles</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./page/bailes.html">
+                    <button type="button" class="btn boton">
+                      Bailes
+                    </button>
+                  </a>
+                </li>
+                
+              </ul>
+            </div>
+          </div>
+        </nav>
     </header>
     <hr />
     <main>
