--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ml-auto">
+              <ul class="navbar-nav ml-auto align-items-center">
                 <li class="nav-item active">
                   <a class="nav-link text-dark" href="./page/instalaciones.html">Instalaciones</a>
                 </li>
