--- a/navbar/menuHamburguesa.html
+++ b/navbar/menuHamburguesa.html
@@ -55,7 +55,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ml-auto align-items-center">
                   <li class="nav-item active">
                     <a class="nav-link text-dark" href="/index.html">opcion1</a>
                   </li>
