--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </nav>
     </header>
     <section class="principal">
-      <div class="container">
+      <div class="container container-principal">
         <div class="principalImagen">
           <div class="fondoImagen">
             <img
@@ -79,12 +79,13 @@
         </div>
       </div>
     </section>
+
     <section class="segunda">
       <div class="content">
         <h3>que harás?</h3>
         <h1>disfrutar en nuestra academia</h1>
       </div>
-      <div class="container">
+      <div class="container container-secundario">
         <div class="fondoImagenDos">
           <img
             class="imagen"
@@ -120,7 +121,7 @@
       </div>
     </section>
     <section class="tercera">
-      <div class="container">
+      <div class="container container-tercera">
         <div class="box">
           <h1 class="tituloh1">
             nuestras clases
