--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <nav class="navbar navbar-expand-md navbar-light navbarnosotros d-flex justify-content-between w-100 h-100">
         <div class="container-fluid ">
           <a class="navbar-brand">
-            <img width="150" src="imagenes/G (1)-PhotoRoom.png-PhotoRoom.png" alt="Logo" />
+            <img src="imagenes/G (1)-PhotoRoom.png-PhotoRoom.png" alt="Logo" />
           </a>
           <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,37 +86,39 @@
         <h1>disfrutar en nuestra academia</h1>
       </div>
       <div class="container container-secundario">
-        <div class="fondoImagenDos">
-          <img
-            class="imagen"
-            src="./imagenes/baile_bachata.jfif"
-            alt="Imagen 2"
-          />
-          <img
-            class="imagen"
-            src="./imagenes/baile_bachata1.jfif"
-            alt="Imagen 3"
-          />
-          <img
-            class="imagen"
-            src="./imagenes/baile_merengue.jfif"
-            alt="Imagen 4"
-          />
-          <img
-            class="imagen"
-            src="./imagenes/baile_merengue1.jfif"
-            alt="Imagen 5"
-          />
-          <img
-            class="imagen"
-            src="./imagenes/baile_salsa.jfif"
-            alt="Imagen 6"
-          />
-          <img
-            class="imagen"
-            src="./imagenes/baile_salsa1.jfif"
-            alt="Imagen 7"
-          />
+        <div class="recuadroSecundario">
+          <div class="fondoImagenDos">
+            <img
+              class="imagen"
+              src="./imagenes/baile_bachata.jfif"
+              alt="Imagen 2"
+            />
+            <img
+              class="imagen"
+              src="./imagenes/baile_bachata1.jfif"
+              alt="Imagen 3"
+            />
+            <img
+              class="imagen"
+              src="./imagenes/baile_merengue.jfif"
+              alt="Imagen 4"
+            />
+            <img
+              class="imagen"
+              src="./imagenes/baile_merengue1.jfif"
+              alt="Imagen 5"
+            />
+            <img
+              class="imagen"
+              src="./imagenes/baile_salsa.jfif"
+              alt="Imagen 6"
+            />
+            <img
+              class="imagen"
+              src="./imagenes/baile_salsa1.jfif"
+              alt="Imagen 7"
+            />
+          </div>
         </div>
       </div>
     </section>
