actualice toda la pagina con los valores para pantalla mayor de 1000px

--- a/index.html
+++ b/index.html
@@ -1,139 +1,101 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Academia de baile</title>
-    <!-- bootstrap -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    />
-    <!-- BOOTSTRAP SCRIPT-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"
-      integrity="sha256-cAnmHNGzGYh3qfxBxQmLH50zztUGcvmws8t94f0EzJY="
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <!-- VIEWPORT -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- fontawesome -->
-    <script
-      src="https://kit.fontawesome.com/a42b43434c.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- CSS  -->
-    <link rel="stylesheet" type="text/css" href="./css/index.css" />
-  </head>
-  <body>
-    <div class="circulo"></div>
-    <header>
-      <nav class="navbar navbar-expand-md navbar-light navbarnosotros d-flex justify-content-between w-100 h-100">
-        <div class="container-fluid ">
-          <a class="navbar-brand">
-            <img src="imagenes/G (1)-PhotoRoom.png-PhotoRoom.png" alt="Logo" />
-          </a>
-          <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse " id="navbarNav">
-            <ul class="navbar-nav ml-auto align-items-center">
-              <li class="nav-item">
-                <a class="nav-link text-dark" href="./page/instalaciones.html">Instalaciones</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link  text-dark" href="./page/nosotrxs.html">Nosotrxs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link  text-dark" href="./page/aranceles.html">Aranceles</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link  text-dark btn" href="./page/bailes.html">Bailes</a>
-              </li>
-            </ul>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Academia de baile</title>
+  <!-- bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+  <!-- BOOTSTRAP SCRIPT-->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"
+    integrity="sha256-cAnmHNGzGYh3qfxBxQmLH50zztUGcvmws8t94f0EzJY=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <!-- VIEWPORT -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/a42b43434c.js" crossorigin="anonymous"></script>
+  <!-- CSS  -->
+  <link rel="stylesheet" type="text/css" href="./css/index.css" />
+</head>
+
+<body>
+  <div class="circulo"></div>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light navbarnosotros d-flex justify-content-between w-100 h-100">
+      <div class="container-fluid ">
+        <a class="navbar-brand">
+          <img src="imagenes/G (1)-PhotoRoom.png-PhotoRoom.png" alt="Logo" />
+        </a>
+        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbarNav">
+          <ul class="navbar-nav ml-auto align-items-center">
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="./page/instalaciones.html">Instalaciones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link  text-dark" href="./page/nosotrxs.html">Nosotrxs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link  text-dark" href="./page/aranceles.html">Aranceles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link  text-dark btn" href="./page/bailes.html">Bailes</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
-    <section class="principal">
-      <div class="container container-principal">
-        <div class="principalImagen">
+      </div>
+    </nav>
+  </header>
+  <section class="primera">
+    <div class="conteiner">
+      <div class="container-content">
           <div class="fondoImagen">
-            <img
-              class="imagenBailarines"
-              src="./imagenes/baile2-PhotoRoom.png-PhotoRoom.png"
-              alt="Imagen 1"
-            />
-            </div>
+            <img class="imagenBailarines" src="./imagenes/baile2-PhotoRoom.png-PhotoRoom.png" alt="Imagen 1" />
         </div>
         <div class="containerLetras">
           <h1>BAILA</h1>
           <p>SIN LIMITES</p>
-          <a class="botonBailes indent" href="./page/bailes.html">Bailes</a>
+          <a class="btn" href="./page/bailes.html">Bailes</a>
         </div>
       </div>
-    </section>
-
-    <section class="segunda">
+    </div>
+  </section>
+  <section class="segunda">
+    <div class="conteiner-content">
       <div class="content">
         <h3>que harás?</h3>
         <h1>disfrutar en nuestra academia</h1>
       </div>
-      <div class="container container-secundario">
-        <div class="recuadroSecundario">
-          <div class="fondoImagenDos">
-            <img
-              class="imagen"
-              src="./imagenes/baile_bachata.jfif"
-              alt="Imagen 2"
-            />
-            <img
-              class="imagen"
-              src="./imagenes/baile_bachata1.jfif"
-              alt="Imagen 3"
-            />
-            <img
-              class="imagen"
-              src="./imagenes/baile_merengue.jfif"
-              alt="Imagen 4"
-            />
-            <img
-              class="imagen"
-              src="./imagenes/baile_merengue1.jfif"
-              alt="Imagen 5"
-            />
-            <img
-              class="imagen"
-              src="./imagenes/baile_salsa.jfif"
-              alt="Imagen 6"
-            />
-            <img
-              class="imagen"
-              src="./imagenes/baile_salsa1.jfif"
-              alt="Imagen 7"
-            />
-          </div>
+      <div class=" conteiner">
+        <div class="fondoImagenDos">
+              <img class="imagen" src="./imagenes/IMAGENMERENGUE3.jpg" alt="Imagen 2" />
+              <img class="imagen" src="./imagenes/baile_bachata1.jfif" alt="Imagen 3" />
+              <img class="imagen" src="./imagenes/baile_merengue.jfif" alt="Imagen 4" />
+              <img class="imagen" src="./imagenes/baile_bachata.jfif" alt="Imagen 5" />
+              <img class="imagen" src="./imagenes/IMAGENBACHATA3.jpg" alt="Imagen 6" />
+              <img class="imagen" src="./imagenes/baile_merengue1.jfif" alt="Imagen 7" />
         </div>
       </div>
-    </section>
-    <section class="tercera">
-      <div class="container container-tercera">
-        <div class="box">
-          <h1 class="tituloh1">
-            nuestras clases
-          </h1>
+    </div>
+  </section>
+  <section class="tercera">
+      <div class="conteiner-content">
+        <div class="content">
+          <h3>aprende!</h3>
+          <h1>sobre nuestras clases</h1>
+        </div> 
+      </div>  
           <div class="containerClases">
             <div class="item">
               <h1>Salsa</h1>
               <hr />
               <p>
-                s un baile apasionante. En nuestras clases de salsa, aprenderás a
+                 un baile apasionante. ven a  nuestras clases de salsa y aprenderás a
                 sentir el ritmo de la música y a moverte al compás de la salsa. Con
                 nuestros instructores experimentados, pronto estarás bailando como
                 un profesional
@@ -143,40 +105,36 @@
               <h1>Bachata</h1>
               <hr />
               <p>
-                s un baile sensual y romántico. En nuestras clases de bachata, te
-                enseñaremos los pasos básicos y las técnicas avanzadas para que
-                puedas bailar la bachata con confianza y estilo
+                 un baile sensual y romántico. 
+                 Aprende en nuestras clases. 
+                 Te enseñaremos los pasos básicos 
+                 y técnicas avanzadas para bailar 
+                 con estilo y confianza. ¡Ven y 
+                 disfruta de esta hermosa danza!
               </p>
             </div>
             <div class="item">
               <h1>Merengue</h1>
               <hr />
               <p>
-                s un baile animado y divertido. En nuestras clases de merengue, te
+                 un baile animado y divertido. En nuestras clases de merengue, te
                 enseñaremos los pasos básicos y las técnicas avanzadas para que
                 puedas bailar el merengue con soltura y gracia. ¡Ven y únete a la
                 fiesta de baile!
               </p>
             </div>
-          </div>
-        </div>
       </div>
-    </section>
-    <footer class="footer">
-      <h3>Seguinos en nuestras redes:</h3>
-      <div class="icon-footer">
-        <a href="http://www.instagram.com" target="_blank"
-          ><i class="fa-brands fa-instagram"></i
-        ></a>
-        <a href="http://www.facebook.com" target="_blank"
-          ><i class="fa-brands fa-facebook"></i
-        ></a>
-        <a href="http://www.twitter.com" target="_blank"
-          ><i class="fa-brands fa-twitter"></i
-        ></a>
-      </div>
-      <p>Todos los derechos reservados © 2023 Grupo 2 C54</p>
-    </footer>
+  </section>
+  <footer class="footer">
+    <h3>Seguinos en nuestras redes:</h3>
+    <div class="icon-footer">
+      <a href="http://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a href="http://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+      <a href="http://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+    </div>
+    <p>Todos los derechos reservados © 2023 Grupo 2 C54</p>
+  </footer>
 
-  </body>
+</body>
+
 </html>
