completado de las mediaqueries y finalizacion de la pagina

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="conteiner-content">
       <div class="content">
         <h3>que harás?</h3>
-        <h1>disfrutar en nuestra academia</h1>
+        <h1>disfrutar nuestras clases</h1>
       </div>
       <div class=" conteiner">
         <div class="fondoImagenDos">
@@ -95,32 +95,20 @@
               <h1>Salsa</h1>
               <hr />
               <p>
-                 un baile apasionante. ven a  nuestras clases de salsa y aprenderás a
-                sentir el ritmo de la música y a moverte al compás de la salsa. Con
-                nuestros instructores experimentados, pronto estarás bailando como
-                un profesional
-              </p>
+                Descubre la pasión de la salsa en nuestras clases. Aprende los pasos básicos y técnicas avanzadas para bailar con estilo y confianza donde quieras. Sumérgete en el ritmo y deja que la música te lleve a nuevos niveles de expresión y diversión. ¡Ven y disfruta la salsa una nueva experiencia llena de sabor y magia!             </p>
             </div>
             <div class="item">
               <h1>Bachata</h1>
               <hr />
               <p>
-                 un baile sensual y romántico. 
-                 Aprende en nuestras clases. 
-                 Te enseñaremos los pasos básicos 
-                 y técnicas avanzadas para bailar 
-                 con estilo y confianza. ¡Ven y 
-                 disfruta de esta hermosa danza!
+                La bachata, danza sensual y romántica, te espera en nuestras clases. Descubre los secretos de este baile lleno de pasión y conexión. Aprende los pasos básicos y técnicas avanzadas para expresar tus emociones con gracia y estilo. ¡Ven y déjate envolver por la cadencia suave y envolvente de la bachata!
               </p>
             </div>
             <div class="item">
               <h1>Merengue</h1>
               <hr />
               <p>
-                 un baile animado y divertido. En nuestras clases de merengue, te
-                enseñaremos los pasos básicos y las técnicas avanzadas para que
-                puedas bailar el merengue con soltura y gracia. ¡Ven y únete a la
-                fiesta de baile!
+                El merengue te invita a bailar con alegría y energía contagiosa. Únete a nuestras clases y aprende los pasos básicos y técnicas avanzadas para moverte al ritmo de este género caribeño. Siente la vibrante cadencia de la música y déjate llevar por el torbellino de emociones. ¡Ven y vive la magia del merengue!
               </p>
             </div>
       </div>
