--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse " id="navbarNav">
-          <ul class="navbar-nav ml-auto align-items-center">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link text-dark" href="./page/instalaciones.html">Instalaciones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  text-dark" href="./page/nosotrxs.html">Nosotrxs</a>
+              <a class="nav-link  text-dark" href="./page/nosotrxs.html">Aranceles</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  text-dark" href="./page/aranceles.html">Aranceles</a>
+              <a class="nav-link  text-dark" href="./page/aranceles.html">Nosotrxs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link  text-dark btn" href="./page/bailes.html">Bailes</a>
