--- a/index.html
+++ b/index.html
@@ -95,20 +95,20 @@
               <h1>Salsa</h1>
               <hr />
               <p>
-                Descubre la pasión de la salsa en nuestras clases. Aprende los pasos básicos y técnicas avanzadas para bailar con estilo y confianza donde quieras. Sumérgete en el ritmo y deja que la música te lleve a nuevos niveles de expresión y diversión. ¡Ven y disfruta la salsa una nueva experiencia llena de sabor y magia!             </p>
+                Descubre la pasión de la Salsa en nuestras clases. Aprende los pasos básicos y técnicas avanzadas para bailar con estilo y confianza donde quieras. Sumérgete en el ritmo y deja que la música te lleve a nuevos niveles de expresión y diversión. ¡Ven y disfruta la salsa una nueva experiencia llena de sabor y magia!</p>
             </div>
             <div class="item">
               <h1>Bachata</h1>
               <hr />
               <p>
-                La bachata, danza sensual y romántica, te espera en nuestras clases. Descubre los secretos de este baile lleno de pasión y conexión. Aprende los pasos básicos y técnicas avanzadas para expresar tus emociones con gracia y estilo. ¡Ven y déjate envolver por la cadencia suave y envolvente de la bachata!
+                Descubre la pasión de la Bachata en nuestras clases. Aprende los pasos básicos y técnicas avanzadas para bailar con estilo y confianza donde quieras. Sumérgete en el ritmo y deja que la música te lleve a nuevos niveles de expresión y diversión. ¡Ven y disfruta la salsa una nueva experiencia llena de sabor y magia!
               </p>
             </div>
             <div class="item">
               <h1>Merengue</h1>
               <hr />
               <p>
-                El merengue te invita a bailar con alegría y energía contagiosa. Únete a nuestras clases y aprende los pasos básicos y técnicas avanzadas para moverte al ritmo de este género caribeño. Siente la vibrante cadencia de la música y déjate llevar por el torbellino de emociones. ¡Ven y vive la magia del merengue!
+                Descubre la pasión del Merengue en nuestras clases. Aprende los pasos básicos y técnicas avanzadas para bailar con estilo y confianza donde quieras. Sumérgete en el ritmo y deja que la música te lleve a nuevos niveles de expresión y diversión. ¡Ven y disfruta la salsa una nueva experiencia llena de sabor y magia!
               </p>
             </div>
       </div>
