creacion de inicio de sesion

--- a/navbar/menuHamburguesa.html
+++ b/navbar/menuHamburguesa.html
@@ -68,7 +68,7 @@
                   <li class="nav-item">
                     <a class="nav-link" href="../page/inicioSesion.html">
                       <button type="button" class="btn boton">
-                        Bailes
+                        Iniciar Sesión
                       </button>
                     </a>
                   </li>
