--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link text-dark" href="./page/instalaciones.html">Instalaciones</a>
+              <a class="nav-link text-dark" href="./page/bailes.html">Bailes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link  text-dark" href="./page/nosotrxs.html">Aranceles</a>
@@ -44,7 +44,7 @@
               <a class="nav-link  text-dark" href="./page/aranceles.html">Nosotrxs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  text-dark btn" href="./page/bailes.html">Bailes</a>
+              <a class="nav-link  text-dark btn" href="./page/inicioSesion.html">Iniciar Sesión</a>
             </li>
           </ul>
         </div>
