arreglando  link de navegacion

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
               <a class="nav-link text-dark" href="./page/bailes.html">Bailes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  text-dark" href="./page/nosotrxs.html">Aranceles</a>
+              <a class="nav-link  text-dark" href="./page/aranceles.html">Aranceles</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  text-dark" href="./page/aranceles.html">Nosotrxs</a>
+              <a class="nav-link  text-dark" href="./page/nosotrxs.html">Nosotrxs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link  text-dark btn" href="./page/inicioSesion.html">Iniciar Sesión</a>
