--- a/navbar/menuHamburguesa.html
+++ b/navbar/menuHamburguesa.html
@@ -23,51 +23,31 @@
   <link rel="stylesheet" href="menuHamburguesa.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-light navbarBaile">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <img
-                  src="../imagenes/G (1)-PhotoRoom.png-PhotoRoom.png"
-                  alt="Logo"
-                  width="150"
-                  class="logo"
-                />
-              </a>
-            <button
-                class="navbar-toggler bg-light"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link text-dark" href="/index.html">opcion1</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-dark" href="./page/productos.html">opcion2</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-dark" href="./page/promociones.html">opcion3</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../page/inicioSesion.html">
-                      <button type="button" class="btn boton">
-                        Iniciar Sesión
-                      </button>
-                    </a>
-                  </li>
-                  
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light navbarnosotros d-flex justify-content-between w-100 h-100">
+      <div class="container-fluid ">
+        <a class="navbar-brand">
+          <img src="../imagenes/G (1)-PhotoRoom.png-PhotoRoom.png" alt="Logo" />
+        </a>
+        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="./page/bailes.html">Bailes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link  text-dark" href="./page/aranceles.html">Aranceles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link  text-dark" href="./page/nosotrxs.html">Nosotrxs</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 </body>
 </html>
